   * Fix sierra and canon drivers picking up old gphoto2 headers.
   * libiconv linking fix for PTP2 driver.
   * Require external libltdl.
   * Ditched autogen.sh, use standard autoreconf from stock autoconf.
   * Put auto* files into auto-aux/ and auto-m4/.
   * Accept utilsdir and udevscriptdir set by user (#1646520).
   * Introduce libgphoto2-uninstalled.pc pkgconfig file (#1643245).

libgphoto2 API:
   * New gp_file_new_from_fd() ... Which allows mapping CameraFile to
     UNIX filedescriptors for both reading and writing.
   * New gp_file_slurp() function (for camlib use) to sequentially
     read out CameraFiles.
   * New gp_camera_get_storageinfo() API added to get programmatically
     the storage information(s), like capability, free space and labels.

     On cameras not supporting it returns GP_ERROR_NOT_SUPPORTED.

   * Enhanced Bayer algorithm added globally.

Package / System integration:
   * New syntax for print-camera-list's udev output. See help output.
   * Add new permission setup binary doing Microsoft OS Descriptor
     retrieval for MTP devices not explicitly listed.
     This binary (check-mtp-device) is used by the generated UDEV rules.
     (Not working currently since udev does not create the device before
     calling it.)

disk port:
   * handle automounter properly.

directory driver:
   * ignore anything not starting by '.' because it is not DCF compliant
     and it is use for things like Trash of metadata...

PTP2 driver:
   * For Canon capture capable cameras, enable shutter and aperture control
     using "shootingmode" property (PTP d00c), and focuslock mode.

   * New dataflow engine, making it possible to upload/download images
     or songs without taking up any system memory. (think multi GB movies
     on small devices).

   * Enhanced MTP protocol handling.

   * New USB IDs for cameras:

 	Canon PowerShot SD1000, A450, A550, A420, SD40, SD750
	Canon Digitial IXUS 70, 900Ti, 75
	Canon MV750i
	Nikon CoolPix S4, S6, P4